relaxng-gen/tests/snapshots/build__test-tuto6a.snap
---
source: relaxng-gen/tests/build.rs
expression: combined
---
--- card/preferred_format/preferred_format_choice/ff.rs ---
//!`ff` module
use crate::{Error, Result, ToXml};
use std::str::FromStr;
///`<ff/>` element
#[derive(Debug, Clone, PartialEq, Eq, Hash)]
pub struct Ff {
    pub value: String,
}
impl ToXml for Ff {
    type Builder = FfBuilder;
    fn to_xml<W>(&self, writer: &mut quick_xml::Writer<W>) -> Result<()>
    where
        W: std::io::Write,
    {
        use quick_xml::events::{Event, BytesStart, BytesEnd, BytesText};
        let mut start = BytesStart::new("ff");
        let empty = {
            true
                && ({
                    let elem = &self.value;
                    false
                })
        };
        if empty {
            writer.write_event(Event::Empty(start))?;
        } else {
            writer.write_event(Event::Start(start))?;
            {
                let elem = &self.value;
                writer.write_event(Event::Text(BytesText::new(&elem.to_string())))?;
            }
            writer.write_event(Event::End(BytesEnd::new("ff")))?;
        }
        Ok(())
    }
}
impl Ff {
    pub fn from_xml(node: &roxmltree::Node) -> Result<Self> {
        let mut builder = Self::builder();
        for child in node.children() {
            match child.tag_name().name() {
                _ => continue,
            }
        }
        if let Some(val) = node.text() {
            match val {
                _ => {
                    builder.value(val)?;
                }
            }
        }
        builder.build()
    }
}
impl core::fmt::Display for Ff {
    fn fmt(&self, f: &mut core::fmt::Formatter<'_>) -> std::fmt::Result {
        let mut writer = quick_xml::Writer::new_with_indent(
            std::io::Cursor::new(Vec::new()),
            b' ',
            2,
        );
        self.to_xml(&mut writer).expect("Failed to generate XML");
        let res = writer.into_inner().into_inner();
        let str = String::from_utf8(res).expect("Failed to convert bytes to string");
        f.write_str(&str)
    }
}
///`<ff/>` builder
#[derive(Default, Debug, Clone, PartialEq, Eq, Hash)]
pub struct FfBuilder {
    pub value: Option<String>,
}
impl FfBuilder {
    pub fn value<T>(&mut self, value: T) -> Result<&mut Self>
    where
        T: TryInto<String>,
        Error: From<<T as TryInto<String>>::Error>,
    {
        self.value = Some(value.try_into()?);
        Ok(self)
    }
    /**
            Attempt to build [`Ff`].

            If the element is not valid, an error is returned.
            */
    pub fn build(&self) -> Result<Ff> {
        let value = Clone::clone(
            self.value.as_ref().ok_or(Error::BuilderMissingField("ff", "value"))?,
        );
        Ok(Ff { value })
    }
}

--- card/preferred_format/preferred_format_choice.rs ---
use crate::{Error, Result, ToXml};
use std::str::FromStr;
pub mod ff;
use ff::Ff;
#[derive(Debug, Clone, PartialEq, Eq, Hash)]
pub enum PreferredFormatChoice {
    Html,
    Text,
    Ff(Ff),
}
impl ToXml for PreferredFormatChoice {
    type Builder = PreferredFormatChoiceBuilder;
    fn to_xml<W>(&self, writer: &mut quick_xml::Writer<W>) -> Result<()>
    where
        W: std::io::Write,
    {
        use quick_xml::events::{BytesEnd, BytesStart, BytesText, Event};
        match self {
            Self::Html => {
                writer.write_event(Event::Text(BytesText::new("html")))?;
            }
            Self::Text => {
                writer.write_event(Event::Text(BytesText::new("text")))?;
            }
            Self::Ff(ff) => {
                let elem = ff;
                {
                    let elem = ff;
                    elem.to_xml(writer)?;
                }
            }
        }
        Ok(())
    }
}
impl core::fmt::Display for PreferredFormatChoice {
    fn fmt(&self, f: &mut core::fmt::Formatter<'_>) -> std::fmt::Result {
        let mut writer = quick_xml::Writer::new_with_indent(
            std::io::Cursor::new(Vec::new()),
            b' ',
            2,
        );
        self.to_xml(&mut writer).expect("Failed to generate XML");
        let res = writer.into_inner().into_inner();
        let str = String::from_utf8(res).expect("Failed to convert bytes to string");
        f.write_str(&str)
    }
}
impl PreferredFormatChoice {
    pub fn from_xml(
        node: &roxmltree::Node,
        from_child: &mut Option<roxmltree::Node>,
    ) -> Result<PreferredFormatChoice> {
        let mut builder = PreferredFormatChoice::builder();
        loop {
            let Some(child) = from_child else {
                break;
            };
            match child.node_type() {
                roxmltree::NodeType::Element => {
                    match child.tag_name().name() {
                        "ff" if Ff::from_xml(&child).is_ok() => {
                            builder.ff(Ff::from_xml(&child)?)?;
                        }
                        _ => {}
                    }
                }
                roxmltree::NodeType::Text => {
                    if let Some(val) = child.text() {
                        match val {
                            "html" => {
                                builder.html()?;
                            }
                            "text" => {
                                builder.text()?;
                            }
                            _ => {}
                        }
                    }
                }
                _ => {}
            }
            *from_child = child.next_sibling();
            if let Ok(build) = builder.build() {
                return Ok(build);
            }
        }
        builder.build()
    }
    pub fn to_xml_attr(
        &self,
        __start: &mut quick_xml::events::BytesStart<'_>,
    ) -> Result<()> {
        match self {
            Self::Html => {}
            Self::Text => {}
            Self::Ff(ff) => {
                let elem = ff;
            }
        }
        Ok(())
    }
    pub fn is_empty(&self) -> bool {
        self.to_string().is_empty()
    }
}
#[derive(Default, Debug, Clone, PartialEq, Eq, Hash)]
pub struct PreferredFormatChoiceBuilder {
    html: Option<()>,
    text: Option<()>,
    ff: Option<Ff>,
}
impl PreferredFormatChoiceBuilder {
    pub fn html(&mut self) -> Result<&mut Self> {
        self.html = Some(());
        Ok(self)
    }
    pub fn text(&mut self) -> Result<&mut Self> {
        self.text = Some(());
        Ok(self)
    }
    pub fn ff<T>(&mut self, ff: T) -> Result<&mut Self>
    where
        T: TryInto<Ff>,
        Error: From<<T as TryInto<Ff>>::Error>,
    {
        self.ff = Some(ff.try_into()?);
        Ok(self)
    }
    pub fn build(&self) -> Result<PreferredFormatChoice> {
        if self.html.is_some() {
            return Ok(PreferredFormatChoice::Html);
        }
        if self.text.is_some() {
            return Ok(PreferredFormatChoice::Text);
        }
        if self.ff.is_some() {
            return Ok(
                PreferredFormatChoice::Ff(Clone::clone(&self.ff.as_ref().unwrap())),
            );
        }
        Err(Error::BuilderVariant("PreferredFormatChoice"))
    }
}

--- card/preferred_format.rs ---
//!`preferredFormat` module
use crate::{Error, Result, ToXml};
use std::str::FromStr;
pub mod preferred_format_choice;
use preferred_format_choice::PreferredFormatChoice;
///`<preferredFormat/>` element
#[derive(Debug, Clone, PartialEq, Eq, Hash)]
pub struct PreferredFormat {
    pub preferred_format_choice: PreferredFormatChoice,
}
impl ToXml for PreferredFormat {
    type Builder = PreferredFormatBuilder;
    fn to_xml<W>(&self, writer: &mut quick_xml::Writer<W>) -> Result<()>
    where
        W: std::io::Write,
    {
        use quick_xml::events::{Event, BytesStart, BytesEnd, BytesText};
        let mut start = BytesStart::new("preferredFormat");
        {
            let elem = &self.preferred_format_choice;
            elem.to_xml_attr(&mut start)?;
        }
        let empty = {
            true
                && ({
                    let elem = &self.preferred_format_choice;
                    elem.is_empty()
                })
        };
        if empty {
            writer.write_event(Event::Empty(start))?;
        } else {
            writer.write_event(Event::Start(start))?;
            {
                let elem = &self.preferred_format_choice;
                elem.to_xml(writer)?;
            }
            writer.write_event(Event::End(BytesEnd::new("preferredFormat")))?;
        }
        Ok(())
    }
}
impl PreferredFormat {
    pub fn from_xml(node: &roxmltree::Node) -> Result<Self> {
        let mut builder = Self::builder();
        for child in node.children() {
            match child.tag_name().name() {
                _ => continue,
            }
        }
        if let Some(val) = node.text() {
            match val {
                _ => {}
            }
        }
        let child = &mut node.first_child();
        builder.preferred_format_choice(PreferredFormatChoice::from_xml(node, child)?)?;
        builder.build()
    }
}
impl core::fmt::Display for PreferredFormat {
    fn fmt(&self, f: &mut core::fmt::Formatter<'_>) -> std::fmt::Result {
        let mut writer = quick_xml::Writer::new_with_indent(
            std::io::Cursor::new(Vec::new()),
            b' ',
            2,
        );
        self.to_xml(&mut writer).expect("Failed to generate XML");
        let res = writer.into_inner().into_inner();
        let str = String::from_utf8(res).expect("Failed to convert bytes to string");
        f.write_str(&str)
    }
}
///`<preferredFormat/>` builder
#[derive(Default, Debug, Clone, PartialEq, Eq, Hash)]
pub struct PreferredFormatBuilder {
    pub preferred_format_choice: Option<PreferredFormatChoice>,
}
impl PreferredFormatBuilder {
    pub fn preferred_format_choice<T>(
        &mut self,
        preferred_format_choice: T,
    ) -> Result<&mut Self>
    where
        T: TryInto<PreferredFormatChoice>,
        Error: From<<T as TryInto<PreferredFormatChoice>>::Error>,
    {
        self.preferred_format_choice = Some(preferred_format_choice.try_into()?);
        Ok(self)
    }
    /**
            Attempt to build [`PreferredFormat`].

            If the element is not valid, an error is returned.
            */
    pub fn build(&self) -> Result<PreferredFormat> {
        let preferred_format_choice = Clone::clone(
            self
                .preferred_format_choice
                .as_ref()
                .ok_or(
                    Error::BuilderMissingField(
                        "preferredFormat",
                        "preferred_format_choice",
                    ),
                )?,
        );
        Ok(PreferredFormat {
            preferred_format_choice,
        })
    }
}

--- card.rs ---
//!`card` module
use crate::{Error, Result, ToXml};
use std::str::FromStr;
pub mod preferred_format;
use preferred_format::PreferredFormat;
///`<card/>` element
#[derive(Debug, Clone, PartialEq, Eq, Hash)]
pub struct Card {
    pub preferred_formats: Vec<PreferredFormat>,
}
impl ToXml for Card {
    type Builder = CardBuilder;
    fn to_xml<W>(&self, writer: &mut quick_xml::Writer<W>) -> Result<()>
    where
        W: std::io::Write,
    {
        use quick_xml::events::{Event, BytesStart, BytesEnd, BytesText};
        let mut start = BytesStart::new("card");
        let empty = {
            true
                && ({
                    let elem = &self.preferred_formats;
                    elem.iter().all(|elem| false)
                })
        };
        if empty {
            writer.write_event(Event::Empty(start))?;
        } else {
            writer.write_event(Event::Start(start))?;
            {
                let elem = &self.preferred_formats;
                for elem in elem {
                    elem.to_xml(writer)?;
                }
            }
            writer.write_event(Event::End(BytesEnd::new("card")))?;
        }
        Ok(())
    }
}
impl Card {
    pub fn from_xml(node: &roxmltree::Node) -> Result<Self> {
        let mut builder = Self::builder();
        for child in node.children() {
            match child.tag_name().name() {
                "preferredFormat" if PreferredFormat::from_xml(&child).is_ok() => {
                    builder.preferred_format(PreferredFormat::from_xml(&child)?)?;
                }
                _ => continue,
            }
        }
        if let Some(val) = node.text() {
            match val {
                _ => {}
            }
        }
        builder.build()
    }
}
impl core::fmt::Display for Card {
    fn fmt(&self, f: &mut core::fmt::Formatter<'_>) -> std::fmt::Result {
        let mut writer = quick_xml::Writer::new_with_indent(
            std::io::Cursor::new(Vec::new()),
            b' ',
            2,
        );
        self.to_xml(&mut writer).expect("Failed to generate XML");
        let res = writer.into_inner().into_inner();
        let str = String::from_utf8(res).expect("Failed to convert bytes to string");
        f.write_str(&str)
    }
}
///`<card/>` builder
#[derive(Default, Debug, Clone, PartialEq, Eq, Hash)]
pub struct CardBuilder {
    pub preferred_formats: Vec<PreferredFormat>,
}
impl CardBuilder {
    pub fn preferred_format<T>(&mut self, preferred_format: T) -> Result<&mut Self>
    where
        T: TryInto<PreferredFormat>,
        Error: From<<T as TryInto<PreferredFormat>>::Error>,
    {
        self.preferred_formats.push(preferred_format.try_into()?);
        Ok(self)
    }
    /**
            Attempt to build [`Card`].

            If the element is not valid, an error is returned.
            */
    pub fn build(&self) -> Result<Card> {
        let preferred_formats = Clone::clone(&self.preferred_formats);
        Ok(Card { preferred_formats })
    }
}

--- lib.rs ---
#![doc = concat!(
    "Generated from ",
    "'/home/elmarco/src/relaxng-rust/relaxng-gen/tests/fixtures/tuto6a.rnc'", " schema."
)]
#![allow(dead_code)]
#![allow(unused_mut)]
#![allow(unused_variables)]
#![allow(unused_imports)]
use thiserror::Error;
pub mod card;
pub use card::*;
/// The error type used by this crate.
#[derive(Error, Debug)]
pub enum Error {
    #[error("IO error: {0}")]
    Io(#[from] std::io::Error),
    #[error("From UTF-8 error: {0}")]
    FromUtf8Error(#[from] std::string::FromUtf8Error),
    #[error("{0} builder is missing mandatory field: {1}")]
    BuilderMissingField(&'static str, &'static str),
    #[error("{0} builder cannot build a variant")]
    BuilderVariant(&'static str),
    #[error("String too short, expected at least {0} characters, got {1}")]
    TooShort(usize, usize),
    #[error("String too long, expected at most {0} characters, got {1}")]
    TooLong(usize, usize),
    #[error("String '{0}' does not match pattern '{1}'")]
    PatternMismatch(&'static str, String),
    #[error("Failed to compile regex: {0}")]
    RegexError(#[from] regex::Error),
    #[error("Failed to parse '{0}': {1}")]
    ParseError(
        &'static str,
        #[source]
        Box<dyn std::error::Error + Send + Sync + 'static>,
    ),
}
impl From<std::convert::Infallible> for Error {
    fn from(_: std::convert::Infallible) -> Self {
        unreachable!("Infallible error should not occur")
    }
}
/// Helper trait for this crate XML types.
pub trait ToXml {
    /// The associated builder type.
    type Builder: Default;
    /// Creates a new builder for this type.
    fn builder() -> Self::Builder {
        Self::Builder::default()
    }
    /// Writes Events to a XML writer.
    fn to_xml<W>(&self, writer: &mut quick_xml::Writer<W>) -> Result<()>
    where
        W: std::io::Write;
}
#[doc(hidden)]
pub trait RegexPattern {
    const REGEX: &'static str;
}
#[doc(hidden)]
#[derive(Debug, Clone, Copy, PartialEq, Eq, Hash)]
pub struct NoPattern;
impl RegexPattern for NoPattern {
    const REGEX: &'static str = "";
}
/// A string type with length constraints and optional runtime regex validation.
#[derive(Debug, Clone, PartialEq, Eq, Hash)]
pub struct ConstrainedString<
    const MIN_LEN: usize,
    const MAX_LEN: usize,
    P: RegexPattern = NoPattern,
> {
    value: String,
    _phantom: std::marker::PhantomData<P>,
}
impl<
    const MIN: usize,
    const MAX: usize,
    P: RegexPattern,
> ConstrainedString<MIN, MAX, P> {
    pub const NO_MIN_CONSTRAINT: usize = 0;
    pub const NO_MAX_CONSTRAINT: usize = usize::MAX;
    pub fn try_new(value: impl Into<String>) -> Result<Self> {
        let s = value.into();
        Self::validate(&s)?;
        Ok(Self {
            value: s,
            _phantom: std::marker::PhantomData,
        })
    }
    fn validate(s: &str) -> Result<()> {
        fn get_compiled_regex(pattern: &'static str) -> Result<regex::Regex> {
            /// Registry for compiled regex patterns
            static REGEX_REGISTRY: std::sync::OnceLock<
                std::sync::Mutex<std::collections::HashMap<&'static str, regex::Regex>>,
            > = std::sync::OnceLock::new();
            if pattern.is_empty() {
                return Ok(regex::Regex::new(".*").unwrap());
            }
            let registry = REGEX_REGISTRY
                .get_or_init(|| std::sync::Mutex::new(std::collections::HashMap::new()));
            let mut map = registry.lock().unwrap();
            if let Some(regex) = map.get(pattern) {
                return Ok(regex.clone());
            }
            match regex::Regex::new(pattern) {
                Ok(regex) => {
                    let result = regex.clone();
                    map.insert(pattern, regex);
                    Ok(result)
                }
                Err(e) => Err(Error::RegexError(e)),
            }
        }
        if MIN > Self::NO_MIN_CONSTRAINT && s.len() < MIN {
            return Err(Error::TooShort(MIN, s.len()));
        }
        if MAX < Self::NO_MAX_CONSTRAINT && s.len() > MAX {
            return Err(Error::TooLong(MAX, s.len()));
        }
        if !P::REGEX.is_empty() {
            let regex = get_compiled_regex(P::REGEX)?;
            if !regex.is_match(s) {
                return Err(Error::PatternMismatch(P::REGEX, s.to_string()));
            }
        }
        Ok(())
    }
    /// Returns the string as a `&str`.
    #[must_use]
    pub fn as_str(&self) -> &str {
        &self.value
    }
    /// Converts the constrained string into a `String`, consuming it.
    #[must_use]
    pub fn into_string(self) -> String {
        self.value
    }
}
impl<const MIN: usize, const MAX: usize, P: RegexPattern> std::ops::Deref
for ConstrainedString<MIN, MAX, P> {
    type Target = str;
    fn deref(&self) -> &Self::Target {
        &self.value
    }
}
impl<const MIN: usize, const MAX: usize, P: RegexPattern> std::fmt::Display
for ConstrainedString<MIN, MAX, P> {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{}", self.value)
    }
}
impl<const MIN: usize, const MAX: usize, P: RegexPattern> AsRef<str>
for ConstrainedString<MIN, MAX, P> {
    fn as_ref(&self) -> &str {
        &self.value
    }
}
impl<const MIN: usize, const MAX: usize, P: RegexPattern> std::str::FromStr
for ConstrainedString<MIN, MAX, P> {
    type Err = Error;
    fn from_str(s: &str) -> Result<Self> {
        Self::try_new(s)
    }
}
/// A specialized Result type where the error is hard-wired to [`enum@Error`].
pub type Result<T, E = Error> = std::result::Result<T, E>;

--- main.rs ---
use std::path::Path;
use std::{env::args, fs};
fn main() {
    let path = args().nth(1).expect("No XML file path provided");
    let xml_path = Path::new(&path);
    let xml = fs::read_to_string(xml_path).expect("Failed to read test XML file");
    let xml = roxmltree::Document::parse(&xml).expect("Failed to parse XML");
    let root = xml.root().first_child().expect("No root element found");
    let res = test_tuto6a::Card::from_xml(&root).unwrap();
    let res = res.to_string();
    println!("{}", res);
}
